# tutor-contrib-redirect

./: .bumpversion.cfg  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml
tutorredirect/: plugin.py
tutorredirect/patches/: k8s-services
